--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 
-  <title>Work Day Planner</title>
+  <title>Work-Day Planner</title>
 </head>
 
 <body>
   <header class="jumbotron">
-    <h1 class="display-3">Work Day Planner</h1>
+    <h1 class="display-3">Work-Day Planner</h1>
     <h2 class="lead"></h2>
     <p id="currentTime" class="lead"></p>
   </header>
