cleaned up time-blocks div in index.html and fixed setItem for localStorage

--- a/index.html
+++ b/index.html
@@ -27,24 +27,60 @@
 
   <div class="plannerContainer">
     <!-- Timeblocks -->
-    <p class='hour'> 9AM <input type="text" class="hr" id="9hr" data-index="9" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button> </p>
-    <p class='hour'> 10AM <input type="text" class="hr" id="10hr" data-index="10" style="width: 80%" ;><button
-         class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button></p>
-    <p class='hour'> 11AM <input type="text" class="hr" id="11hr" data-index="11" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button></p>
-    <p class='hour'> 12PM <input type="text" class="hr" id="12hr" data-index="12" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button> </p>
-    <p class='hour'> 1PM <input type="text" class="hr" id="13hr" data-index="13" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button> </p>
-    <p class='hour'> 2PM <input type="text" class="hr" id="14hr" data-index="14" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button> </p>
-    <p class='hour'> 3PM <input type="text" class="hr" id="15hr" data-index="15" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button> </p>
-    <p class='hour'> 4PM <input type="text" class="hr" id="16hr" data-index="16" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button></p>
-    <p class='hour'> 5PM <input type="text" class="hr" id="17hr" data-index="17" style="width: 80%" ;><button
-      class="saveBtn"> <i class="far fa-save" alt="floppy disk icon"></i> </button> </p>
+    <p class='hour'> 9AM 
+      <input type="text" class="hr" id="9hr" data-index="9" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button>
+    </p>
+    <p class='hour'> 10AM 
+      <input type="text" class="hr" id="10hr" data-index="10" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button>
+    </p>
+    <p class='hour'> 11AM 
+      <input type="text" class="hr" id="11hr" data-index="11" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button>
+    </p>
+    <p class='hour'> 12PM 
+      <input type="text" class="hr" id="12hr" data-index="12" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button> 
+    </p>
+    <p class='hour'> 1PM 
+      <input type="text" class="hr" id="13hr" data-index="13" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button> 
+    </p>
+    <p class='hour'> 2PM 
+      <input type="text" class="hr" id="14hr" data-index="14" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button> 
+    </p>
+    <p class='hour'> 3PM 
+      <input type="text" class="hr" id="15hr" data-index="15" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button> 
+    </p>
+    <p class='hour'> 4PM 
+      <input type="text" class="hr" id="16hr" data-index="16" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button>
+    </p>
+    <p class='hour'> 5PM 
+      <input type="text" class="hr" id="17hr" data-index="17" style="width: 80%" />
+      <button class="saveBtn"> 
+        <i class="far fa-save" alt="floppy disk icon"></i> 
+      </button> 
+    </p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
